--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,6 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.487.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -42,17 +36,25 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "react-day-picker": "^8.10.1",
-    "date-fns": "^3.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "vaul": "^0.9.1",
+    "date-fns": "^3.0.0",
+    "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.2.4",
-    "recharts": "^2.12.7",
-    "react-resizable-panels": "^2.1.7",
+    "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
-    "sonner": "^2.0.3",
+    "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
-    "embla-carousel-react": "^8.6.0"
+    "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.7.1",
+    "recharts": "^2.12.7",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^2.0.0",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
