--- a/worker/package.json
+++ b/worker/package.json
@@ -1,4 +1,23 @@
 {
+  "name": "collepto-worker",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy"
+  },
+  "dependencies": {
+    "hono": "^4.6.6",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "wrangler": "^3.77.0",
+    "typescript": "^5.4.0"
+  }
+}
+
+{
   "name": "collepto-backend",
   "version": "1.0.0",
   "description": "Self-hosted collector's website backend",
