--- a/worker/tsconfig.json
+++ b/worker/tsconfig.json
@@ -1,6 +1,17 @@
 {
   "compilerOptions": {
     "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "strict": true,
+    "types": ["@cloudflare/workers-types"]
+  },
+  "include": ["src/**/*"]
+}
+
+{
+  "compilerOptions": {
+    "target": "ES2022",
     "lib": ["ES2022"],
     "module": "ESNext",
     "moduleResolution": "bundler",
