--- a/worker/package.json
+++ b/worker/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "hono": "^4.6.6",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "wrangler": "^3.77.0",
